[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/art/fullscreen/redWireCut.png" type="Texture" id=1]
[ext_resource path="res://assets/art/fullscreen/greenWire.png" type="Texture" id=2]
[ext_resource path="res://assets/art/fullscreen/greenWireCut.png" type="Texture" id=3]
[ext_resource path="res://assets/art/fullscreen/energyboxUncutWires.png" type="Texture" id=4]
[ext_resource path="res://assets/art/fullscreen/redwire.png" type="Texture" id=5]
[ext_resource path="res://assets/art/fullscreen/yellowWire.png" type="Texture" id=6]
[ext_resource path="res://assets/art/fullscreen/yellowWireCut.png" type="Texture" id=7]
[ext_resource path="res://scenes/interact/FSEnergyBox.gd" type="Script" id=8]

[node name="OpenEnergyBox" type="Popup"]
pause_mode = 2
margin_left = -760.0
margin_top = -280.0
margin_right = -760.0
margin_bottom = -280.0
rect_scale = Vector2( 2.5, 2.5 )
script = ExtResource( 8 )

[node name="EnergyboxUncutWires" type="Sprite" parent="."]
position = Vector2( 504, 240 )
texture = ExtResource( 4 )

[node name="RedWire" type="Sprite" parent="EnergyboxUncutWires"]
position = Vector2( 24, -8 )
texture = ExtResource( 5 )

[node name="RedWireCut" type="Sprite" parent="EnergyboxUncutWires"]
visible = false
position = Vector2( 24, -8 )
texture = ExtResource( 1 )

[node name="GreenWire" type="Sprite" parent="EnergyboxUncutWires"]
position = Vector2( 48, -8 )
texture = ExtResource( 2 )

[node name="GreenWireCut" type="Sprite" parent="EnergyboxUncutWires"]
visible = false
position = Vector2( 48, -8 )
texture = ExtResource( 3 )

[node name="YellowWire" type="Sprite" parent="EnergyboxUncutWires"]
position = Vector2( 72, -8 )
texture = ExtResource( 6 )

[node name="YellowWireCut" type="Sprite" parent="EnergyboxUncutWires"]
visible = false
position = Vector2( 72, -8 )
texture = ExtResource( 7 )

[connection signal="about_to_show" from="." to="." method="_on_OpenEnergyBox_about_to_show"]
[connection signal="popup_hide" from="." to="." method="_on_OpenEnergyBox_popup_hide"]
